Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-86881

Ensure Services destruct before ServiceContext destructor asserts invariant on Client set

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Labels:
      None
    • Service Arch
    • Fully Compatible
    • ALL
    • Service Arch 2024-03-04
    • 140

      SERVER-85475 moved the AuthorizationManager from being a decoration on ServiceContext, to a decoration on Service. The effect of this is that the AuthorizationManager's threads are no longer guaranteed to be joined before the invariant that the ServiceContext's Client set is empty is asserted in the ServiceContext destructor. (See BF-31901). This ticket proposes resetting the ServiceContext's unique_ptr<ServiceSet> member before the invariant is asserted.

            Assignee:
            george.wangensteen@mongodb.com George Wangensteen
            Reporter:
            erwin.pe@mongodb.com Erwin Pe
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: