SERVER-86881 Ensure Services destruct before ServiceContext destructor asserts invariant on Client set

GitOrigin-RevId: e5ae8a009df266320af648b86e8c20a77d55ebed